fjord-compiler/test/errors/TypeNotFound.fj
module TypeNotFound

myUnknownValue : UnknownTypeName
myUnknownValue = 5
